added changes in images and added about.html ,services,testimonials.html

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <section class="slider">
         <div class="slider-container">
             <div class="slider-images" >
-                <div class="slide"><img src="i5.png" alt="Event 1"></div>
-                <div class="slide"><img src="i6.png" alt="Event 2"></div>
-                <div class="slide"><img src="i10.png" alt="Event 3"></div>
-                <div class="slide"><img src="image.png" alt="Event 4"></div>
-                <div class="slide"><img src="i9.png" alt="Event 5"></div>
-                <div class="slide"><img src="i3.png" alt="Event 6"></div>
-                <div class="slide"><img src="i7.png" alt="Event 7"></div>
+                <div class="slide"><img src="images/i5.png" alt="Event 1"></div>
+                <div class="slide"><img src="images/i6.png" alt="Event 2"></div>
+                <div class="slide"><img src="images/i10.png" alt="Event 3"></div>
+                <div class="slide"><img src="images/image.png" alt="Event 4"></div>
+                <div class="slide"><img src="images/i9.png" alt="Event 5"></div>
+                <div class="slide"><img src="images/i3.png" alt="Event 6"></div>
+                <div class="slide"><img src="images/i7.png" alt="Event 7"></div>
             </div>
             <div class="slider-text">
                 <h2 style="text-align: center;font-family: 'Herr Von Muellerhoff';font-size: 55px;">Event Planner</h2>
@@ -71,22 +71,22 @@
     <div class="service-card" style="font-family:Cormorant SC ;font-size: 100px;">
         <h3>Event Consultation</h3>
         <p style="font-size: 120px;">Get expert advice and consultation for your event.</p>
-        <img src="pexels-cherubs-26547613.jpg" alt="Event Consultation">
+        <img src="images/pexels-cherubs-26547613.jpg" alt="Event Consultation">
     </div>
     <div class="service-card" style="font-family:Cormorant SC ;font-size: 100px;">
         <h3>Venue Selection</h3>
         <p style="font-size: 120px;">We help you choose the perfect venue for your event.</p>
-        <img src="pexels-stitch-20696396.jpg" alt="Venue Selection">
+        <img src="images/pexels-stitch-20696396.jpg" alt="Venue Selection">
     </div>
     <div class="service-card" style="font-family:Cormorant SC ;font-size: 100px;">
         <h3>Event Theme & Decor</h3>
         <p style="font-size: 120px;">Create unforgettable themes and decor for your event.</p>
-        <img src="pexels-masoodaslami-29624008.jpg" alt="Event Theme & Decor">
+        <img src="images/pexels-masoodaslami-29624008.jpg" alt="Event Theme & Decor">
     </div>
     <div class="service-card" style="font-family:Cormorant SC ;font-size: 100px;">
         <h3>Catering</h3>
         <p style="font-size: 120px;">Delicious food to make your event even more memorable.</p>
-        <img src="pexels-fu-zhichao-176355-587741.jpg" alt="Catering">
+        <img src="images/pexels-fu-zhichao-176355-587741.jpg" alt="Catering">
     </div>
 </section>
 
@@ -96,15 +96,15 @@
         <h2 style="color: black;font-family:Tangerine;font-size: 80px">Our Portfolio</h2>
         <div class="portfolio-gallery" style="font-family:Cormorant SC ;">
             <div class="portfolio-item">
-                <img src="i10.png" alt="Wedding Event">
+                <img src="images/i10.png" alt="Wedding Event">
                 <div class="hover-text">Wedding Event</div>
             </div>
             <div class="portfolio-item">
-                <img src="corp.png" alt="Corporate Event">
+                <img src="images/corp.png" alt="Corporate Event">
                 <div class="hover-text">Corporate Event</div>
             </div>
             <div class="portfolio-item">
-                <img src="partyyy.png" alt="Party Event">
+                <img src="images/partyyy.png" alt="Party Event">
                 <div class="hover-text">Party Event</div>
             </div>
         </div>
@@ -113,12 +113,12 @@
     <section id="testimonials" class="testimonials">
         <h2 style="color: black;font-family:Tangerine;font-size: 80px">What Our Clients Say</h2>
         <div class="testimonial">
-            <img src="pexels-hardeep-17758677.jpg" alt="Client 1">
+            <img src="images/pexels-hardeep-17758677.jpg" alt="Client 1">
             <p style="font-family:Tangerine;font-size: 40px">"This event was the best we've ever had!"</p>
             <span style="font-family: Cormorant SC;">~Agastya</span>
         </div>
         <div class="testimonial">
-            <img src="pexels-ogproductionz-17243573.jpg" alt="Client 2">
+            <img src="images/pexels-ogproductionz-17243573.jpg" alt="Client 2">
             <p style="font-family: Tangerine; font-size: 40px;">"The team was exceptional, and everything went perfectly!"</p>
             <span style="font-family: Cormorant SC;">~Swift</span>
         </div>
