--- a/portfolio.html
+++ b/portfolio.html
@@ -197,9 +197,9 @@
         <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif;">Weddings</h2>
         <div class="showcase">
             <div style="display: flex; align-items: center;gap:1px;padding: 10px;">
-                <img src="pexels-alexander-mass-748453803-19372846.jpg" alt="Wedding Showcase 1" style="width: 300px; border-radius: 10px;">
+                <img src="images/pexels-alexander-mass-748453803-19372846.jpg" alt="Wedding Showcase 1" style="width: 300px; border-radius: 10px;">
                 <p style="font-family: Cormorant SC;">Weddings are a celebration of love, unity, and the start of a beautiful journey together. At Ivory Luxe, we craft bespoke wedding experiences that blend traditional charm with modern aesthetics. Our expertise in designing breathtaking venues, coordinating seamless ceremonies, and delivering heartfelt moments has made us a trusted partner for countless couples.</p>
-                <img src="pexels-masoodaslami-29624054.jpg" alt="Wedding Showcase 2" style="width: 300px; border-radius: 10px;">
+                <img src="images/pexels-masoodaslami-29624054.jpg" alt="Wedding Showcase 2" style="width: 300px; border-radius: 10px;">
                 <p style="font-family: Cormorant SC;">Experience the magic of extraordinary decor designed with unmatched attention to detail. Every element is thoughtfully curated, blending beauty and precision to create breathtaking settings that captivate the heart and soul.</p>
             </div>
         </div>
@@ -213,9 +213,9 @@
         <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif;">Corporate Events</h2>
         <div class="showcase">
             <div style="display: flex; align-items: center; gap: 1px;padding: 10px;">
-                <img src="pexels-henri-mathieu-8349232.jpg" alt="Corporate Showcase 1" style="width: 300px; border-radius: 10px;">
+                <img src="images/pexels-henri-mathieu-8349232.jpg" alt="Corporate Showcase 1" style="width: 300px; border-radius: 10px;">
                 <p style="font-family: Cormorant SC;">Corporate events require precision, professionalism, and a touch of inspiration. Ivory Luxe specializes in organizing sophisticated corporate gatherings that leave a lasting impression. Whether it's a product launch, an annual gala, or a high-profile meeting, our meticulous planning and creative approach ensure every event achieves its goals with style and grace.</p>
-                <img src="pexels-cottonbro-6535740.jpg" alt="Corporate Showcase 2" style="width: 300px; border-radius: 10px;">
+                <img src="images/pexels-cottonbro-6535740.jpg" alt="Corporate Showcase 2" style="width: 300px; border-radius: 10px;">
                 <p style="font-family: Cormorant SC;">Transform your corporate events into remarkable experiences with our seamlessly stylish solutions. From sophisticated setups to perfectly organized schedules, we handle every detail to make your professional gatherings truly exceptional.</p>
             </div>
         </div>
@@ -229,9 +229,9 @@
         <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif;">Parties</h2>
         <div class="showcase">
             <div style="display: flex; align-items: center; gap: 1px;padding: 10px;">
-                <img src="pexels-cottonbro-3171811.jpg" alt="Party Showcase 1" style="width: 300px; border-radius: 10px;">
+                <img src="images/pexels-cottonbro-3171811.jpg" alt="Party Showcase 1" style="width: 300px; border-radius: 10px;">
                 <p style="font-family: Cormorant SC;">Parties are all about joy, laughter, and unforgettable moments. With Ivory Luxe, every party becomes a masterpiece of fun and elegance. From themed birthday celebrations to vibrant cocktail nights, we bring imaginative ideas, vibrant decorations, and an electric atmosphere that keeps the excitement alive all night long.</p>
-                <img src="pexels-steinportraits-2083746.jpg" alt="Party Showcase 2" style="width: 300px; border-radius: 10px;">
+                <img src="images/pexels-steinportraits-2083746.jpg" alt="Party Showcase 2" style="width: 300px; border-radius: 10px;">
                 <p style="font-family: Cormorant SC;">Immerse yourself in a world of vibrant celebrations where every moment is crafted with impeccable style. From dazzling decorations to lively entertainment, we ensure your parties are filled with unforgettable memories that are cherished forever.</p>
             </div>
         </div>
@@ -245,39 +245,39 @@
         <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif;">Memorable Highlights</h2>
         <div class="slider-container">
             <div class="slider">
-                <img src="1.jpg" alt="Highlight 1">
-                <img src="2.jpg" alt="Highlight 2">
-                <img src="3.jpg" alt="Highlight 3">
-                <img src="4.jpg" alt="Highlight 4">
-                <img src="5.jpg" alt="Highlight 5">
-                <img src="6.jpg" alt="Highlight 6">
-                <img src="7.jpg" alt="Highlight 7">
-                <img src="8.jpg" alt="Highlight 8">
-                <img src="9.jpg" alt="Highlight 9">
-                <img src="10.jpg" alt="Highlight 10">
-                <img src="11.jpg" alt="Highlight 11">
-                <img src="12.jpg" alt="Highlight 12">
-                <img src="13.jpg" alt="Highlight 13">
-                <img src="14.jpg" alt="Highlight 14">
-                <img src="15.jpg" alt="Highlight 15">
-                <img src="16.jpg" alt="Highlight 16">
+                <img src="images/1.jpg" alt="Highlight 1">
+                <img src="images/2.jpg" alt="Highlight 2">
+                <img src="images/3.jpg" alt="Highlight 3">
+                <img src="images/4.jpg" alt="Highlight 4">
+                <img src="images/5.jpg" alt="Highlight 5">
+                <img src="images/6.jpg" alt="Highlight 6">
+                <img src="images/7.jpg" alt="Highlight 7">
+                <img src="images/8.jpg" alt="Highlight 8">
+                <img src="images/9.jpg" alt="Highlight 9">
+                <img src="images/10.jpg" alt="Highlight 10">
+                <img src="images/11.jpg" alt="Highlight 11">
+                <img src="images/12.jpg" alt="Highlight 12">
+                <img src="images/13.jpg" alt="Highlight 13">
+                <img src="images/14.jpg" alt="Highlight 14">
+                <img src="images/15.jpg" alt="Highlight 15">
+                <img src="images/16.jpg" alt="Highlight 16">
                 <!-- Duplicate images to ensure seamless loop -->
-                <img src="1.jpg" alt="Highlight 1">
-                <img src="2.jpg" alt="Highlight 2">
-                <img src="3.jpg" alt="Highlight 3">
-                <img src="4.jpg" alt="Highlight 4">
-                <img src="5.jpg" alt="Highlight 5">
-                <img src="6.jpg" alt="Highlight 6">
-                <img src="7.jpg" alt="Highlight 7">
-                <img src="8.jpg" alt="Highlight 8">
-                <img src="9.jpg" alt="Highlight 9">
-                <img src="10.jpg" alt="Highlight 10">
-                <img src="11.jpg" alt="Highlight 11">
-                <img src="12.jpg" alt="Highlight 12">
-                <img src="13.jpg" alt="Highlight 13">
-                <img src="14.jpg" alt="Highlight 14">
-                <img src="15.jpg" alt="Highlight 15">
-                <img src="16.jpg" alt="Highlight 16">
+                <img src="images/1.jpg" alt="Highlight 1">
+                <img src="images/2.jpg" alt="Highlight 2">
+                <img src="images/3.jpg" alt="Highlight 3">
+                <img src="images/4.jpg" alt="Highlight 4">
+                <img src="images/5.jpg" alt="Highlight 5">
+                <img src="images/6.jpg" alt="Highlight 6">
+                <img src="images/7.jpg" alt="Highlight 7">
+                <img src="images/8.jpg" alt="Highlight 8">
+                <img src="images/9.jpg" alt="Highlight 9">
+                <img src="images/10.jpg" alt="Highlight 10">
+                <img src="images/11.jpg" alt="Highlight 11">
+                <img src="images/12.jpg" alt="Highlight 12">
+                <img src="images/13.jpg" alt="Highlight 13">
+                <img src="images/14.jpg" alt="Highlight 14">
+                <img src="images/15.jpg" alt="Highlight 15">
+                <img src="images/16.jpg" alt="Highlight 16">
             </div>
         </div>
     </section>
