--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             <div class="slider-images" >
                 <div class="slide"><img src="images/i5.png" alt="Event 1"></div>
                 <div class="slide"><img src="images/i6.png" alt="Event 2"></div>
-                <div class="slide"><img src="images/i10.png" alt="Event 3"></div>
+                <div class="slide"><img src="images/i11.png" alt="Event 3"></div>
                 <div class="slide"><img src="images/image.png" alt="Event 4"></div>
-                <div class="slide"><img src="images/i9.png" alt="Event 5"></div>
+                <div class="slide"><img src="images/i12.png" alt="Event 5"></div>
                 <div class="slide"><img src="images/i3.png" alt="Event 6"></div>
                 <div class="slide"><img src="images/i7.png" alt="Event 7"></div>
             </div>
@@ -71,22 +71,22 @@
     <div class="service-card" style="font-family:Cormorant SC ;font-size: 100px;">
         <h3>Event Consultation</h3>
         <p style="font-size: 120px;">Get expert advice and consultation for your event.</p>
-        <img src="images/pexels-cherubs-26547613.jpg" alt="Event Consultation">
+        <img src="images/i13.png" alt="Event Consultation">
     </div>
     <div class="service-card" style="font-family:Cormorant SC ;font-size: 100px;">
         <h3>Venue Selection</h3>
         <p style="font-size: 120px;">We help you choose the perfect venue for your event.</p>
-        <img src="images/pexels-stitch-20696396.jpg" alt="Venue Selection">
+        <img src="images/i14.png" alt="Venue Selection">
     </div>
     <div class="service-card" style="font-family:Cormorant SC ;font-size: 100px;">
         <h3>Event Theme & Decor</h3>
         <p style="font-size: 120px;">Create unforgettable themes and decor for your event.</p>
-        <img src="images/pexels-masoodaslami-29624008.jpg" alt="Event Theme & Decor">
+        <img src="images/i16.png" alt="Event Theme & Decor">
     </div>
     <div class="service-card" style="font-family:Cormorant SC ;font-size: 100px;">
         <h3>Catering</h3>
         <p style="font-size: 120px;">Delicious food to make your event even more memorable.</p>
-        <img src="images/pexels-fu-zhichao-176355-587741.jpg" alt="Catering">
+        <img src="images/i15.png" alt="Catering">
     </div>
 </section>
 
