updated images and some layouts in contact.html,portfolio.html

--- a/about.html
+++ b/about.html
@@ -266,6 +266,7 @@
                 <a href="index.html"><h1 style="font-family: 'Herr Von Muellerhoff', sans-serif;">Ivory Luxe</h1></a>
             </div>
             <ul class="nav-links" style="font-family:Cormorant SC ;">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
@@ -288,10 +289,10 @@
                     <h3 style="font-family:Cormorant SC ;color: black; font-size:50px;">Our Vision</h3>
                     <p style="font-family:Cormorant SC ;color: #333; font-size:20px;">At Ivory Luxe, our vision extends far beyond simply organizing events. We aspire to revolutionize the event planning landscape by creating unparalleled experiences that resonate with the emotions of our clients. Each celebration we curate is a reflection of our unwavering commitment to perfection and creativity. We believe in crafting moments that are not just memorable but truly transformative—bringing dreams to life in ways that leave lasting impressions for years to come.</p>
                 </div>
-                <img src="images/pexels-evonics-1058277.jpg" alt="Vision">
+                <img src="images/i17.png" alt="Vision">
             </div>
             <div class="section">
-                <img src="images/pexels-cottonbro-4255412.jpg" alt="Mission">
+                <img src="images/i18.png" alt="Mission">
                 <div class="section-text">
                     <h3 style="font-family:Cormorant SC ;color: black;font-size:50px;">Our Mission</h3>
                     <p style="font-family:Cormorant SC ;color: #333; font-size:20px;">Our mission is rooted in the art of delivering excellence with a personal touch. We aim to exceed expectations through meticulous planning, innovative solutions, and an unrelenting dedication to quality. Whether it’s a grand celebration or an intimate gathering, every detail is thoughtfully considered to ensure a seamless and unforgettable event. At Ivory Luxe, we are passionate about turning ordinary moments into extraordinary memories that celebrate life’s milestones in style.</p>
@@ -302,7 +303,7 @@
                     <h3 style="font-family:Cormorant SC ;color: black;font-size:50px;">Our Values</h3>
                     <p style="font-family:Cormorant SC ;color: #333; font-size:20px;">Integrity, innovation, and client-centric service are the cornerstones of our philosophy. We hold ourselves to the highest standards of ethics and transparency, ensuring every interaction reflects our core principles. Our team thrives on pushing creative boundaries, introducing fresh ideas that redefine possibilities in event planning. Above all, we prioritize our clients, making their visions our mission and their satisfaction our ultimate reward. These values guide us as we strive to leave a positive impact in every endeavor.</p>
                 </div>
-                <img src="images/pexels-rosario-fernandes-26325-3835638.jpg" alt="Values">
+                <img src="images/i19.png" alt="Values">
             </div>
         </div>
     </section>
