--- a/contact.html
+++ b/contact.html
@@ -216,7 +216,7 @@
         .appointment-image img {
             max-width: 100%;
             width: 75%;
-            height: 650px%;
+            height: 650px;
             border-radius: 0px;
         }
         /* Initial state for the roll-out effect */
@@ -293,6 +293,7 @@
                 <a href="index.html"><h1 style="font-family: 'Herr Von Muellerhoff', sans-serif;">Ivory Luxe</h1></a>
             </div>
             <ul class="nav-links" style="font-family:Cormorant SC ;">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
@@ -303,11 +304,11 @@
     </header>
 
     <!-- Let's Connect Section -->
-    <section class="connect-section" style="background-image: url('pexels-apasaric-2078071.jpg');">
+    <section class="connect-section" style="background-image: url('images/i29.png');">
         <div class="connect-container">
             <!-- Connect Image in a Box -->
             <div class="connect-image-box">
-                <img src="images/pexels-apasaric-2078071.jpg" alt="Connect" class="connect-image">
+                <img src="images/i29.png" alt="Connect" class="connect-image">
                 <div class="connect-text">
                     <h2 style="font-family: 'Herr Von Muellerhoff', sans-serif;color: aliceblue;">Let's Connect</h2>
                     <p style="font-family:Cormorant SC;color: aliceblue;padding-bottom: 20px;">We'd love to hear from you! Connect with us and share your thoughts, feedback, or questions on our social channels. We're always here to listen and engage!</p>
@@ -404,8 +405,8 @@
             </div>
             
             <div class="appointment-text" style="color: #e0d2d2;">
-                <h2 style="font-family:Tangerine">Never Done an Appointment Before?</h2>
-                <p style="font-family:Cormorant SC ;">Click below to learn more about our services and how we can help make your event unforgettable.</p>
+                <h2 style="font-family:Tangerin;">Never Done an Appointment Before?</h2>
+                <p style="font-family:Cormorant SC;">Click below to learn more about our services and how we can help make your event unforgettable.</p>
                 <a href="#services" class="cta-link" style="font-family:Cormorant SC ;background-color: #fff;color: #333;">Explore Services</a>
             </div>
         </div>
