--- a/testimonials.html
+++ b/testimonials.html
@@ -271,6 +271,7 @@
                 <a href="index.html"><h1 style="font-family: 'Herr Von Muellerhoff', sans-serif;">Ivory Luxe</h1></a>
             </div>
             <ul class="nav-links" style="font-family:Cormorant SC ;">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
@@ -281,8 +282,8 @@
     </header>
 
     <section class="header2" style="background-image: url('images/pexels-a-darmel-7641869.jpg'); background-size: cover; background-position: center; color: white; display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; text-align: center;">
-        <h1 style="font-family: 'Herr Von Muellerhoff', sans-serif; color: #333;">What Our Clients Say</h1>
-        <p style="font-family: 'Cormorant SC', serif;">At Ivory Luxe, we value the trust and love of our clients. Here's what they have to say about their experiences with us.</p>
+        <h1 style="font-family: 'Herr Von Muellerhoff', sans-serif; color: #f4f1eb;">What Our Clients Say</h1>
+        <p style="font-family: 'Cormorant SC', serif; color: #f7f7f7;">At Ivory Luxe, we value the trust and love of our clients. <br>Here's what they have to say about their experiences with us.</p>
     </section>
 
     <!-- Testimonials Section -->
@@ -295,7 +296,7 @@
                     <img src="images/pexels-danielpool-27913669.jpg" alt="Client Photo">
                     <h3>Mark</h3>
                     <p class="rating">⭐⭐⭐⭐⭐</p>
-                    <p>"Ivory Luxe turned our dream wedding into a reality. Every detail was perfect, and the team was incredibly professional."</p>
+                    <p>"Ivory Luxe turned our dream wedding into a reality. Every detail was perfect,and the team was incredibly professional."</p>
                 </div>
                 <div class="testimonial-card">
                     <img src="images/pexels-ab_h_i-s_h_ek_09-283673767-29652526.jpg" alt="Client Photo">
