--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <h1 style="font-family: 'Herr Von Muellerhoff', sans-serif;">Ivory Luxe</h1>
             </div>
             <ul class="nav-links" style="font-family:Cormorant SC ;">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
