--- a/services.html
+++ b/services.html
@@ -134,7 +134,10 @@
             transform: translateY(0);
         }
         /* Pricing */
-        .pricing .pricing-plan {
+        .pricing-plan {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             background: white;
             padding: 20px;
             border-radius: 10px;
@@ -145,8 +148,20 @@
             font-family: 'Cormorant SC', serif;
         }
         .pricing-plan button {
-            margin-top: auto; /* Pushes the button to the bottom */
+            margin-top: 15px; /* Pushes the button to the bottom */
             align-self: center; /* Centers the button horizontally */
+            padding: 10px 20px; 
+            background-color: #000000; 
+            color: white; 
+            border: none; 
+            border-radius: 5px;
+            cursor: pointer; 
+            font-size: 16px; 
+            font-family: Texturina;
+            
+        }
+        .pricing-plan button:hover {
+            background-color: #dccfa0; /* Change this to your desired hover color */
         }
         .faq-item button{
             margin-top: auto; /* Pushes the button to the bottom */
@@ -231,11 +246,11 @@
         </div>
     </section>
     <!-- Updated Section: Pricing -->
-    <section id="pricing" class="pricing" style="padding: 60px 20px; background: url('path-to-image.jpg') no-repeat center center/cover; height: 100vh; width: 100%;">
-        <h2 class="section-title" style="font-size: 36px; text-align: center; margin-bottom: 40px;">Pricing</h2>
+    <section id="pricing" class="pricing" style="padding: 60px 20px; background: url('images/i22.png') no-repeat center center/cover; height: 100vh; width: 100%;">
+        <h2 class="section-title" style="font-size: 36px; text-align: center; color: aliceblue; margin-bottom: 40px;font-family:'Cormorant SC';">Pricing</h2>
         <div class="pricing-container" style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
             <!-- Basic Package -->
-            <div class="pricing-plan" style="width: 300px; border: 1px solid #ddd; border-radius: 10px; background: white; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
+            <div class="pricing-plan" style="width: 300px; border: 1px solid #ddd; border-radius: 10px; background-color: rgba(255, 255, 255, 0.666); padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
                 <h3 style="font-size: 24px; color: #444;">Basic Package</h3>
                 <p style="font-size: 18px; margin: 10px 0; color: #666;">$1000</p>
                 <ul style="list-style: none; padding: 0; text-align: left; color: #555;">
@@ -244,10 +259,10 @@
                     <li>✖ Catering</li>
                     <li>✖ Decor</li>
                 </ul>
-                <button style="margin-top: 20px; padding: 10px 20px; background-color: #000000; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; font-family: Texturina;">Select Package</button>
+                <button >Select Package</button>
             </div>
             <!-- Premium Package -->
-            <div class="pricing-plan" style="width: 300px; border: 1px solid #ddd; border-radius: 10px; background: white; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
+            <div class="pricing-plan" style="width: 300px; border: 1px solid #ddd; border-radius: 10px; background-color: rgba(255, 255, 255, 0.666); padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
                 <h3 style="font-size: 24px; color: #444;">Premium Package</h3>
                 <p style="font-size: 18px; margin: 10px 0; color: #666;">$2000</p>
                 <ul style="list-style: none; padding: 0; text-align: left; color: #555;">
@@ -256,10 +271,10 @@
                     <li>✔ Catering & Decor</li>
                     <li>✔ On-Site Management</li>
                 </ul>
-                <button style="margin-top: 20px; padding: 10px 20px; background-color: #000000; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px;font-family: Texturina;">Select Package</button>
+                <button >Select Package</button>
             </div>
             <!-- Luxury Package -->
-            <div class="pricing-plan" style="width: 300px; border: 1px solid #ddd; border-radius: 10px; background: white; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
+            <div class="pricing-plan" style="width: 300px; border: 1px solid #ddd; border-radius: 10px; background-color: rgba(255, 255, 255, 0.666); padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
                 <h3 style="font-size: 24px; color: #444;">Luxury Package</h3>
                 <p style="font-size: 18px; margin: 10px 0; color: #666;">$5,000</p>
                 <ul style="list-style: none; padding: 0; text-align: left; color: #555;">
@@ -268,10 +283,10 @@
                     <li>✔ Gourmet Dining Experience</li>
                     <li>✔ Professional Photography</li>
                 </ul>
-                <button style="margin-top: 20px; padding: 10px 20px; background-color: #000000; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px;font-family: Texturina;">Select Package</button>
+                <button >Select Package</button>
             </div>
             <!-- Exclusive Package -->
-            <div class="pricing-plan" style="width: 300px; border: 1px solid #ddd; border-radius: 10px; background: white; padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
+            <div class="pricing-plan" style="width: 300px; border: 1px solid #ddd; border-radius: 10px; background-color: rgba(255, 255, 255, 0.666); padding: 20px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease;">
                 <h3 style="font-size: 24px; color: #444;">Exclusive Package</h3>
                 <p style="font-size: 18px; margin: 10px 0; color: #666;">$10,000</p>
                 <ul style="list-style: none; padding: 0; text-align: left; color: #555;">
@@ -280,7 +295,7 @@
                     <li>✔ Exclusive Venue Access</li>
                     <li>✔ Concierge Services</li>
                 </ul>
-                <button style="margin-top: 20px; padding: 10px 20px; background-color: #000000; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px;font-family: Texturina;">Select Package</button>
+                <button >Select Package</button>
             </div>
         </div>
     </section>
