--- a/about.html
+++ b/about.html
@@ -310,7 +310,7 @@
 
     <!-- Social Media Typing Animation -->
     <section class="social-media">
-        <div class="typing-animation" style="color: #333; font-family: Texturina; font-size: 30px;">
+        <div class="typing-animation" style="color: #333; font-family: cursive; font-size: 30px;">
             <span class="social-item">
                 <img src="images/insta.jpeg" alt="Instagram Logo" class="social-logo"> Follow us on Instagram @ivoryluxe
             </span> |
