--- a/portfolio.html
+++ b/portfolio.html
@@ -228,7 +228,7 @@
     </header>
 
     <!-- Portfolio Content -->
-    <section class="section">
+    <section class="section" style="background-image: url('images/i22.png'); width: 100%; height: 100vh;">
         <h2 style="font-family:  'Herr Von Muellerhoff', sans-serif;">Astonishing Works</h2>
         <p style="font-family: Cormorant SC;font-size: 30px;">Ivory Luxe has consistently pushed the boundaries of creativity and innovation, turning ordinary events into extraordinary experiences. From curating elegant themes to executing every detail flawlessly, our work has left an indelible mark on countless occasions. Explore our writings to uncover the passion and dedication that drive us to create timeless memories.</p>
     </section>
